# gs2-parser

./: .gitignore  .gitmodules  .npmrc  CMakeLists.txt  Cargo.toml  JenkinsEnv.json  Jenkinsfile  README.md  build.rs  gen-osx.sh  gen.bat  gen.sh  package-lock.json  package.json  test-workflow.sh
.github/workflows/: ci.yml  release-package.yml
bindings/c/: c_interface.cpp
bindings/dotnet/: CompilerResponse.cs  GS2Compiler.cs  GS2Compiler.csproj  GS2Compiler.sln  Gs2Compiler.cs  Gs2Compiler.csproj  Gs2Compiler.sln  Preagonal.Scripting.GS2Compiler.csproj  Preagonal.Scripting.GS2Compiler.sln  Preagonal.Scripting.GS2Compiler.sln.DotSettings  Response.cs
bindings/dotnet/Preagonal.Scripting.GS2Compiler.UnitTests/: InterfacesTests.cs  Preagonal.Scripting.GS2Compiler.UnitTests.csproj
bindings/js/: js_interface.cpp
bindings/rust/: Cargo.toml  build.rs  lib.rs
cmake/: AddTest.cmake  SubdirList.cmake
generator/: calc.l  calc.y  gs2parser.y  gs2scanner.l
scripts/: asd2.txt  syntax-test.txt  test.gs2  testscript.txt
src/: CompilerThreadJob.h  GS2BuiltInFunctions.cpp  GS2BuiltInFunctions.h  GS2Bytecode.cpp  GS2Bytecode.h  GS2Compiler.cpp  GS2Compiler.h  GS2CompilerVisitor.cpp  GS2CompilerVisitor.h  GS2Context.cpp  GS2Context.h  GS2SourceVisitor.h  Parser.cpp  Parser.h  ast.cpp  ast.h  astvisitor.h  c_interface.cpp  js_interface.cpp  main.cpp  opcodes.h
src/ast/: NodeVisitor.h  ast.cpp  ast.h  astnodevisitor.h  astvisitor.h  expressiontypes.h
src/codegen/: GS2Bytecode.cpp  GS2Bytecode.h
src/compiler/: GS2BuiltInFunctions.cpp  GS2BuiltInFunctions.h  GS2CompilerVisitor.cpp  GS2CompilerVisitor.h  GS2Context.cpp  GS2Context.h
src/encoding/: buffer.cpp  buffer.h  graalencoding.h
src/exceptions/: GS2CompilerError.h
src/memory/: ArenaAllocator.h
src/parser/: Parser.cpp  Parser.h  gs2parser.y
src/utils/: ContextThreadPool.h  EventHandler.h  format_string.h
src/visitors/: ASTNodeVisitor.h  FunctionInspectVisitor.h  GS2CompilerVisitor.cpp  GS2CompilerVisitor.h  GS2SourceVisitor.h
testing/catch2/: CMakeLists.txt
testing/catch2/units/: testfile.cpp
testing/gtest/: CMakeLists.txt
testing/gtest/bytecode-tests/: TestBytecodeExamples.cpp
testing/gtest/fixtures/: GS2BytecodeFixture.h  GS2ContextFixture.h
testing/gtest/units/: TestBuffer.cpp  TestBufferEncoding.cpp  TestGS2Bytecode.cpp  TestGS2Context.cpp
testing/samples/: arithmetic.graphviz  arithmetic.gs2  arithmetic.gs2bc  arrays.gs2  arrays.gs2bc
tests/: compile_test.rs
tests/baselines/advanced/g2k1/: weapon-Day-Night.bytecode  weapon-Day-Night.json  weapon-Staff_Boots.bytecode  weapon-Staff_Boots.json  weapon-Systems_Main.bytecode  weapon-Systems_Main.json  weaponApple Seeds.bytecode  weaponApple Seeds.json  weaponBasket.bytecode  weaponBasket.json  weaponBread Stack.bytecode  weaponBread Stack.json  weaponCandies.bytecode  weaponCandies.json  weaponCatch Net.bytecode  weaponCatch Net.json  weaponDiamond Axe.bytecode  weaponDiamond Axe.json  weaponDiving.bytecode  weaponDiving.json  weaponDraisine.bytecode  weaponDraisine.json  weaponGold Axe.bytecode  weaponGold Axe.json  weaponGold Hammer.bytecode  weaponGold Hammer.json  weaponHat-Trading-GS2.bytecode  weaponHat-Trading-GS2.json  weaponHat-Trading.bytecode  weaponHat-Trading.json  weaponMemeCentral.bytecode  weaponMemeCentral.json  weaponMetal Axe.bytecode  weaponMetal Axe.json  weaponMetal Hammer.bytecode  weaponMetal Hammer.json  weaponMining Bomb.bytecode  weaponMining Bomb.json  weaponParticleEditor.bytecode  weaponParticleEditor.json  (+27 more)
tests/baselines/advanced/graalx/: weapon%045CarSystem.bytecode  weapon%045CarSystem.json  weapon%045GangSystem.json  weapon%045Movement.bytecode  weapon%045Movement.json  weapon%045System.bytecode  weapon%045System.json  weapon+Ammo.bytecode  weapon+Ammo.json  weapon+DogTag.bytecode  weapon+DogTag.json  weapon+Food.bytecode  weapon+Food.json  weapon+Grenades.json  weapon+Guns.bytecode  weapon+Guns.json  weapon+Guns_Debug.bytecode  weapon+Guns_Debug.json  weapon+Guns_KuJi.bytecode  weapon+Guns_KuJi.json  weapon+Guns_M4.bytecode  weapon+Guns_M4.json  weapon+Guns_Shotgun.bytecode  weapon+Guns_Shotgun.json  weapon+Hats.bytecode  weapon+Hats.json  weapon+Melee.bytecode  weapon+Melee.json  (+182 more)
tests/baselines/basic/: 01_variables.bytecode  01_variables.json  02_constants.bytecode  02_constants.json  03_data_types.bytecode  03_data_types.json
tests/baselines/classes/: 01_objects.bytecode  01_objects.json  02_arrays.bytecode  02_arrays.json
tests/baselines/edge_cases/: 01_large_numbers.bytecode  01_large_numbers.json  02_long_strings.bytecode  02_long_strings.json  03_deep_nesting.bytecode  03_deep_nesting.json  04_string_escaping.json
tests/baselines/error_cases/: 01_syntax_errors.json  02_semantic_errors.json  03_string_escaping.json
tests/baselines/expressions/: 01_arithmetic.bytecode  01_arithmetic.json  02_comparison.bytecode  02_comparison.json  03_logical.bytecode  03_logical.json  04_bitwise.bytecode  04_bitwise.json  05_assignment.bytecode  05_assignment.json
tests/baselines/functions/: 01_basic_functions.bytecode  01_basic_functions.json  02_recursion.bytecode  02_recursion.json  03_lambdas.bytecode  03_lambdas.json  04_prejump_grouping.json
tests/baselines/statements/: 01_conditionals.bytecode  01_conditionals.json  02_loops.bytecode  02_loops.json  03_switch.bytecode  03_switch.json  04_with.bytecode  04_with.json
tests/scripts/basic/: 01_variables.gs2  02_constants.gs2  03_data_types.gs2
tests/scripts/classes/: 01_objects.gs2  02_arrays.gs2
tests/scripts/edge_cases/: 01_large_numbers.gs2  02_long_strings.gs2  03_deep_nesting.gs2
tests/scripts/error_cases/: 01_syntax_errors.gs2  02_semantic_errors.gs2  03_string_escaping.gs2
tests/scripts/expressions/: 01_arithmetic.gs2  02_comparison.gs2  03_logical.gs2  04_bitwise.gs2  05_assignment.gs2
tests/scripts/functions/: 01_basic_functions.gs2  02_recursion.gs2  03_lambdas.gs2  04_prejump_grouping.gs2
tests/scripts/statements/: 01_conditionals.gs2  02_loops.gs2  03_switch.gs2  04_with.gs2
tests/tools/: run_tests.py  test_runner.sh
(+201 files in other folders)
