[package]
name = "gs2compiler"
version = "0.1.0"
edition = "2021"
build = "build.rs"
include = ["/src/lib.rs", "/precompiled"]

[dependencies]
libc = "0.2.155"

[features]
default = []

# Compile the C++ code from source without using the precompiled library
compile_from_source = []


[build-dependencies]
cmake = "0.1"